fix color contrast

--- a/styles/place.css
+++ b/styles/place.css
@@ -1,7 +1,7 @@
 :root {
   --font-family: Arial, sans-serif;
-  --background-color: #f05656;
-  --border-color: #d2cd85;
+  --background-color: #ad2525;
+  --border-color: #e5dd71;
 }
 
 body {
